# mathe_core_mlib

./: .gitignore  README.md  pyproject.toml
src/mathe_core_mlib/io/: files.py  folders.py
src/mathe_core_mlib/math/: converters.py
